@@ -1,12 +1,9 @@
-FROM bellsoft/liberica-full:17
+FROM bellsoft/liberica-runtime-full:17
 
 WORKDIR /app
-
-# Install Xvfb for a virtual display
-RUN apt-get update && apt-get install -y xvfb
 
 # Copy the JAR file
 COPY target/pong-game-1.0-SNAPSHOT.jar /app/pong-game.jar
 
-# Start a virtual display & run the application
-CMD ["sh", "-c", "Xvfb :99 -screen 0 1024x768x24 & java -Djava.awt.headless=false -Dprism.verbose=true -Dglass.platform=Monocle -Dmonocle.platform=Headless -jar /app/pong-game.jar"]
+# Run the application with JavaFX modules
+CMD ["java", "--module-path", "/app/javafx-sdk/lib", "--add-modules", "javafx.controls,javafx.fxml", "-jar", "/app/pong-game.jar"]
